--- a/extra_trees.ipynb
+++ b/extra_trees.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "0fd5f165",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "ef6ea41a",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "29f0dbed",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "996ab0a4",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "d88247f8",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "f02555c7",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "b172372f",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "650c3c86",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "id": "267d4e4b",
    "metadata": {},
    "outputs": [
@@ -374,16 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "id": "01adef89",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import log_loss\n",
     "\n",
-    "from sklearn.metrics import log_loss\n",
-    "\n",
-    "def et_tuner(param_dict, X_train, y_train, X_val, y_val):\n",
+    "def et_tuner(param_dict, X_train, y_train, X_val, y_val, X_test=None, y_test=None):\n",
     "    best_model = None\n",
     "    best_score = 0\n",
     "    best_train = 0\n",
@@ -434,82 +432,19 @@
     "    print(f\"Validation accuracy: {best_score:.4f}\")\n",
     "    print(f\"Log loss: {best_log_loss:.4f}\")  # Use the stored log loss\n",
     "    print(f\"Best hyperparameters: {best_params}\")\n",
-    "    return best_model, best_score, best_log_loss, best_params  # Return log loss instead of train accuracy\n"
+    "    \n",
+    "    # Calculate test accuracy if test data is provided\n",
+    "    test_accuracy = None\n",
+    "    if X_test is not None and y_test is not None:\n",
+    "        test_accuracy = best_model.score(X_test, y_test)\n",
+    "        print(f\"Test accuracy: {test_accuracy:.4f}\")\n",
+    "    \n",
+    "    return best_model, best_score, best_log_loss, best_params, test_accuracy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "0ada370f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.metrics import accuracy_score, log_loss\n",
-    "import numpy as np\n",
-    "\n",
-    "def et_tuner_grid(param_dict, X_train, y_train, X_val, y_val):\n",
-    "    \"\"\"\n",
-    "    Tune Extra Trees Classifier using GridSearchCV\n",
-    "    \"\"\"\n",
-    "    # Define the parameter grid\n",
-    "    param_grid = {\n",
-    "        'n_estimators': param_dict.get('n_estimators', [100, 200, 300]),\n",
-    "        'max_depth': param_dict.get('max_depth', [10, 15, 20, None]),\n",
-    "        'min_samples_split': param_dict.get('min_samples_split', [2, 5, 10]),\n",
-    "        'min_samples_leaf': param_dict.get('min_samples_leaf', [1, 2, 4]),\n",
-    "        'max_features': param_dict.get('max_features', ['sqrt', 'log2', 0.8]),\n",
-    "    }\n",
-    "    \n",
-    "    # Create base model\n",
-    "    et_base = ExtraTreesClassifier(\n",
-    "        class_weight='balanced',\n",
-    "        random_state=42,\n",
-    "        n_jobs=-1\n",
-    "    )\n",
-    "    \n",
-    "    # Create GridSearchCV object\n",
-    "    grid_search = GridSearchCV(\n",
-    "        estimator=et_base,\n",
-    "        param_grid=param_grid,\n",
-    "        cv=5,  # 5-fold cross-validation\n",
-    "        scoring='accuracy',  # You can change to 'roc_auc' if binary classification\n",
-    "        n_jobs=-1,\n",
-    "        verbose=1,  # Shows progress\n",
-    "        return_train_score=True\n",
-    "    )\n",
-    "    \n",
-    "    # Fit the grid search\n",
-    "    print(\"Starting Grid Search...\")\n",
-    "    grid_search.fit(X_train, y_train)\n",
-    "    \n",
-    "    # Get the best model\n",
-    "    best_model = grid_search.best_estimator_\n",
-    "    \n",
-    "    # Evaluate on validation set\n",
-    "    val_predictions = best_model.predict(X_val)\n",
-    "    val_proba = best_model.predict_proba(X_val)\n",
-    "    \n",
-    "    best_score = accuracy_score(y_val, val_predictions)\n",
-    "    best_loss = log_loss(y_val, val_proba)\n",
-    "    \n",
-    "    # Get training score for comparison\n",
-    "    train_predictions = best_model.predict(X_train)\n",
-    "    train_score = accuracy_score(y_train, train_predictions)\n",
-    "    \n",
-    "    print(f\"\\nBest parameters found: {grid_search.best_params_}\")\n",
-    "    print(f\"Best cross-validation score: {grid_search.best_score_:.4f}\")\n",
-    "    print(f\"Training accuracy: {train_score:.4f}\")\n",
-    "    print(f\"Validation accuracy: {best_score:.4f}\")\n",
-    "    print(f\"Validation log loss: {best_loss:.4f}\")\n",
-    "    \n",
-    "    return best_model, best_score, best_loss, grid_search.best_params_, grid_search\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "id": "acd5c2ff",
    "metadata": {},
    "outputs": [
@@ -520,7 +455,8 @@
       "Train accuracy: 0.8066\n",
       "Validation accuracy: 0.7561\n",
       "Log loss: 1.0561\n",
-      "Best hyperparameters: {'n_estimators': 100, 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 2}\n"
+      "Best hyperparameters: {'n_estimators': 100, 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 2}\n",
+      "Test accuracy: 0.7509\n"
      ]
     }
    ],
@@ -534,19 +470,20 @@
     "    'max_features': ['sqrt', 'log2', 0.8],\n",
     "}\n",
     "\n",
-    "\n",
-    "best_model1, best_score1, best_loss1, best_params1 = et_tuner(\n",
+    "best_model1, best_score1, best_loss1, best_params1, test_acc1 = et_tuner(\n",
     "    tuning_dict,\n",
     "    X_train_balanced1,\n",
     "    y_train_balanced1,\n",
     "    X_val_scaled1,\n",
-    "    y_val1\n",
+    "    y_val1,\n",
+    "    X_test_scaled1,  # Add test data\n",
+    "    y_test1          # Add test labels\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "id": "49c5f59c",
    "metadata": {},
    "outputs": [
@@ -557,7 +494,8 @@
       "Train accuracy: 0.9123\n",
       "Validation accuracy: 0.8937\n",
       "Log loss: 0.4729\n",
-      "Best hyperparameters: {'n_estimators': 100, 'max_depth': 15, 'min_samples_split': 5, 'min_samples_leaf': 1}\n"
+      "Best hyperparameters: {'n_estimators': 100, 'max_depth': 15, 'min_samples_split': 5, 'min_samples_leaf': 1}\n",
+      "Test accuracy: 0.8780\n"
      ]
     }
    ],
@@ -571,19 +509,20 @@
     "    'max_features': ['sqrt', 'log2', 0.8],\n",
     "}\n",
     "\n",
-    "# Grouped levels\n",
-    "best_model2, best_score2, best_loss2, best_params2 = et_tuner(\n",
+    "best_model2, best_score2, best_loss2, best_params2, test_acc2 = et_tuner(\n",
     "    tuning_dict,\n",
     "    X_train_balanced2,\n",
     "    y_train_balanced2,\n",
     "    X_val_scaled2,\n",
-    "    y_val2\n",
+    "    y_val2,\n",
+    "    X_test_scaled2,  # Add test data\n",
+    "    y_test2          # Add test labels\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "3f6aa03e",
    "metadata": {},
    "outputs": [],
@@ -722,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "id": "c348a065",
    "metadata": {},
    "outputs": [
@@ -788,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "id": "28e5be91",
    "metadata": {},
    "outputs": [
