Adding test accuracy for final models

--- a/Data Cleaning/data-cleaning2.ipynb
+++ b/Data Cleaning/data-cleaning2.ipynb
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "183a0c3e",
    "metadata": {},
    "outputs": [
@@ -1116,81 +1116,9 @@
     }
    ],
    "source": [
+    "# write to file\n",
     "stacked_df.to_parquet(\"final_dataset2.parquet\", index=False)\n",
     "stacked_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "fd6cc048",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        official_name           level   speakers  \\\n",
-      "2784  Standard Arabic  Not Endangered  334800000   \n",
-      "2806           Yoruba  Not Endangered   49900000   \n",
-      "2807           Polish  Not Endangered   45300000   \n",
-      "2808          Burmese  Not Endangered   44400000   \n",
-      "2809          Lingala  Not Endangered   40600000   \n",
-      "...               ...             ...        ...   \n",
-      "2865              Tiv  Not Endangered    5000000   \n",
-      "2866            Tatar  Not Endangered    4800000   \n",
-      "2867             Shan  Not Endangered    4700000   \n",
-      "2868              Lao  Not Endangered    4700000   \n",
-      "2869    Southern Thai  Not Endangered    4500000   \n",
-      "\n",
-      "                                                country  official  regional  \\\n",
-      "2784  Algeria;Bahrain;Chad;Comoros;Cyprus;Djibouti;E...         0         0   \n",
-      "2806                                            Nigeria         0         0   \n",
-      "2807           Czech Republic;Lithuania;Poland;Slovakia         1         0   \n",
-      "2808                                   Myanmar;Thailand         1         0   \n",
-      "2809             Congo, Dem. Rep.;Republic of the Congo         0         0   \n",
-      "...                                                 ...       ...       ...   \n",
-      "2865                                 Peru;Venezuela, RB         0         1   \n",
-      "2866                             Poland;Romania;Ukraine         0         1   \n",
-      "2867                          Ethiopia;Myanmar;Zimbabwe         1         1   \n",
-      "2868                                   Lao PDR;Viet Nam         1         0   \n",
-      "2869                                           Thailand         0         1   \n",
-      "\n",
-      "      minority  national  widely_spoken  country_count  max_urbanization  \\\n",
-      "2784         0         0              0             31           100.000   \n",
-      "2806         0         1              0              1            54.283   \n",
-      "2807         2         0              1              4            68.694   \n",
-      "2808         0         0              1              2            53.608   \n",
-      "2809         2         0              0              2            47.444   \n",
-      "...        ...       ...            ...            ...               ...   \n",
-      "2865         1         0              0              2            88.438   \n",
-      "2866         2         0              0              3            70.095   \n",
-      "2867         0         1              0              3            32.517   \n",
-      "2868         1         0              0              2            39.480   \n",
-      "2869         0         0              0              1            53.608   \n",
-      "\n",
-      "      max_internet_use  \n",
-      "2784             100.0  \n",
-      "2806              39.2  \n",
-      "2807              88.5  \n",
-      "2808              89.5  \n",
-      "2809              30.5  \n",
-      "...                ...  \n",
-      "2865              79.5  \n",
-      "2866              89.2  \n",
-      "2867              58.5  \n",
-      "2868              78.1  \n",
-      "2869              89.5  \n",
-      "\n",
-      "[65 rows x 12 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "df1 = pd.read_parquet('final_dataset.parquet')\n",
-    "df2 = pd.read_parquet('final_dataset2.parquet')\n",
-    "missing = df2[~df2['official_name'].isin(df1['official_name'])]\n",
-    "print(missing)"
    ]
   }
  ],
